--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="reachme">
-                <a href="contact.html"> <i class="fa fa-commenting-o" aria-hidden="true"></i>Reachout me</a>
+                <a href="contact.html"> <i class="fa fa-commenting-o" aria-hidden="true"></i>Contact me</a>
             </div>
             <div class="nav_link">
                 <a href="#education">Education</a>
